--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col-lg-4">
             <div id="Data_Plot"></div>
+        </div>
+        <div class="col-lg-5">
+            <div id="Bar_Plot"></div>
         </div>
         </div>
     </div>
