--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="page-header">
-                <h4> Plotting</h4>
+                <h4>Evaluation Plot Generation</h4>
             </div>
         </div>
         <div class="col-lg-12">
